manifests/echo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-service
spec:
  type: NodePort
  selector:
    app: echo-app
  ports:
    - protocol: TCP
      port: 5678
      targetPort: 5678
